# Emerge

./: README.md  emerge_mop_un.ipynb  mop_cross_validation.ipynb  pyproject.toml
Emerge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demo/: emerge_mop_un.ipynb  mop_cross_validation.ipynb
emerge/: __init__.py  emerge.py
emerge/utils/: func0905.py
